<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.banuacoders.pico.ui.activities.PostsActivity">

    <LinearLayout
        android:id="@+id/container_header_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_shape_bk"
        android:elevation="6dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_login_bk"
            android:contentDescription="@string/logo_desc" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo_desc"
        android:elevation="6dp"
        android:src="@drawable/logo_sulteng"
        app:layout_constraintEnd_toStartOf="@id/app_name_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:elevation="6dp"
        android:text="@string/header_title"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/app_creator"
        app:layout_constraintEnd_toStartOf="@id/btn_sync"
        app:layout_constraintStart_toEndOf="@id/logo_app"
        app:layout_constraintTop_toTopOf="@id/logo_app" />

    <TextView
        android:id="@+id/app_creator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:text="@string/creator"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/app_name_title"
        app:layout_constraintTop_toBottomOf="@id/app_name_title" />

    <ImageView
        android:id="@+id/btn_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/logo_desc"
        android:elevation="6dp"
        android:focusable="true"
        android:src="@drawable/ic_sync_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/app_creator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/app_name_title"
        app:layout_constraintTop_toTopOf="@id/app_name_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@id/container_header_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_creator">

        <TextView
            android:id="@+id/call_center"
            style="@style/TextAppearanceStyle.Label"
            android:gravity="start"
            android:text="@string/province_covid_task_force"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/emergency_number"
            app:layout_constraintEnd_toStartOf="@id/helper_center"
            app:layout_constraintStart_toEndOf="@id/call_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emergency_number"
            style="@style/TextAppearanceStyle.Label"
            android:gravity="start"
            android:text="@string/hotline"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@id/call_center_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/call_center"
            app:layout_constraintTop_toBottomOf="@id/call_center" />

        <ImageView
            android:id="@+id/call_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/logo_desc"
            android:focusable="true"
            android:src="@drawable/ic_call_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/emergency_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/call_center_number"
            style="@style/TextAppearanceStyle.Value"
            android:text="@string/province_task_force_number"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/call_logo"
            app:layout_constraintEnd_toEndOf="@id/emergency_number"
            app:layout_constraintStart_toStartOf="@id/emergency_number"
            app:layout_constraintTop_toBottomOf="@id/emergency_number" />

        <TextView
            android:id="@+id/helper_center"
            style="@style/TextHelper"
            android:text="@string/helper_phone"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/emergency_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/call_center"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_posts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_header_main" />

    <ProgressBar
        android:id="@+id/progress_posts"
        style="@android:style/Widget.Material.Light.ProgressBar.Small.Title"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_header_main" />


</androidx.constraintlayout.widget.ConstraintLayout>
