<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/district_name"
        style="@style/MainLabel"
        android:layout_width="0dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/label_positive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/cities" />

    <TextView
        android:id="@+id/label_positive"
        style="@style/TextAppearanceStyle"
        android:layout_width="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/positive"
        android:textColor="#EF5350"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/label_active"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/district_name" />

    <TextView
        android:id="@+id/value_postive"
        style="@style/TextAppearanceStyle"
        android:layout_width="wrap_content"
        android:text="164 orang"
        android:textColor="#EF5350"
        app:layout_constraintBottom_toBottomOf="@id/label_positive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/label_positive" />

    <TextView
        android:id="@+id/label_active"
        style="@style/TextAppearanceStyle"
        android:layout_width="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/active"
        android:textColor="#1E88E5"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/label_death"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_positive" />

    <TextView
        android:id="@+id/value_active"
        style="@style/TextAppearanceStyle"
        android:layout_width="wrap_content"
        android:text="123 orang"
        android:textColor="#1E88E5"
        app:layout_constraintBottom_toBottomOf="@id/label_active"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/label_active" />

    <TextView
        android:id="@+id/label_death"
        style="@style/TextAppearanceStyle"
        android:layout_width="wrap_content"
        android:layout_margin="4dp"
        android:gravity="start"
        android:text="@string/dead"
        android:textColor="#FBC02D"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/label_recovered"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_active" />

    <TextView
        android:id="@+id/value_death"
        style="@style/TextAppearanceStyle"
        android:layout_width="wrap_content"
        android:text="10 orang"
        android:textColor="#FBC02D"
        app:layout_constraintBottom_toBottomOf="@id/label_death"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/label_death" />

    <TextView
        android:id="@+id/label_recovered"
        style="@style/TextAppearanceStyle"
        android:layout_width="wrap_content"
        android:layout_margin="4dp"
        android:gravity="start"
        android:text="@string/cured"
        android:textColor="#43A047"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/label_ODP"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_death" />

    <TextView
        android:id="@+id/value_recovered"
        style="@style/TextAppearanceStyle"
        android:layout_width="wrap_content"
        android:text="20 orang"
        android:textColor="#43A047"
        app:layout_constraintBottom_toBottomOf="@id/label_recovered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="@id/label_recovered" />

    <TextView
        android:id="@+id/label_ODP"
        style="@style/TextAppearanceStyle"
        android:text="@string/odp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/value_ODP"
        app:layout_constraintEnd_toStartOf="@id/label_PDP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_recovered" />

    <TextView
        android:id="@+id/label_PDP"
        style="@style/TextAppearanceStyle"
        android:text="@string/pdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/label_ODP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_ODP"
        app:layout_constraintTop_toTopOf="@id/label_ODP" />

    <TextView
        android:id="@+id/value_ODP"
        style="@style/TextAppearanceStyle"
        android:text="21"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/value_PDP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_ODP" />

    <TextView
        android:id="@+id/value_PDP"
        style="@style/TextAppearanceStyle"
        android:text="12"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/value_ODP"
        app:layout_constraintTop_toBottomOf="@id/label_PDP" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="value_recovered,value_death,value_active,value_postive"
        tools:layout_editor_absoluteX="130dp" />


</androidx.constraintlayout.widget.ConstraintLayout>